= MagLev Change Log

  For more precise details see: http://bit.ly/d3C6S1

== Unreleased Changes
  
== Changes for 25051 2011-01-18
* Fix Trac 830 , problem in automatic to_proc coercion
* Fix Trac 834 , problem in code generation for instVar access
* Fix Trac 837 , problem in running code under irb and eval
* Fix Trac 838 , problem in smalltalk layer of FFI  implementation.
* Update Rails support to Rails 3.0.3.  The example Gemfile now points to
  Rails 3.0.3, and the active support patches are updated to handle either
  Rails 3.0.3 or Rails 3.0.0.
* Fix Trac 833, exhibited as undefined `[]' on NilClass when using
  Rack::Mount w/o -MallIvsDynamic
* Add -q option to maglev-ruby.  Using both -q and -d runs in debug, but
  w/o all the banner output at VM startup.
* Numerous changes to underlying GemStone 3.0 system
  
== Changes for 24990 2011-01-07
* Fix Trac 827 , problems with automatic to_proc coercion
* Update underlying GemStone 3.0 system to Beta2

== Changes for 24984 2011-01-06
* Pre-install rake-0.8.7 gem
* Pre-install bundler-1.0.7 gem.
* Fix for Trac 825 - Exception backtrace is bogus
* Fix that a subclass of string defining #<< messed up pure ruby gsub etc.
* Changes in GemStone 3.0 stats 
* Changes in GemStone 3.0 to improve conversion from GemStone 2.4
* Other Bugfixes in underlying GemStone 3.0 system

== Changes for 24924 2010-12-23
* Updates to openssl/random.rb to help with crypto work
* Kernel#raise now causes a TypeError, not NoMethodError, if given bad exception class
* Underlying GemStone 3.0 system changes that didn't make it into the Beta release.

== Changes for 24906 2010-12-21
* Add OpenSSL::Random implementation.
* "maglev-gem pristine <gem>" now installs $MAGLEV_HOME/bin files with
  proper #!/usr/bin/env line (--env-shebang).
* Minor bugfixes in underlying GemStone 3.0 system

== Changes for 24893 2010-12-20
* Fix problem running minitest 2.0.1
* Add implementation for Kernel#exit!